bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q7 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
HashJoinExec: mode=CollectLeft, join_type=LeftAnti, on=[(product@0, __inner__product@0)]
  ProjectionExec: expr=[product@0 as product]
    SortExec: TopK(fetch=1000), expr=[AS_SORTABLE_BYTES(offerCount@1) DESC], preserve_partitioning=[false]
      DecodeObjectIdsExec: projections=[decode(product) as product, offerCount]
        ProjectionExec: expr=[product@0 as product, <uuid>@1 as offerCount]
          AggregateExec: mode=Single, gby=[product@0 as product], aggr=[COUNT(offer) as <uuid>]
            DecodeObjectIdsExec: projections=[product, decode(offer) as offer]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType1>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 0, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 0 AND 0 <= object_max@6, required_guarantees=[object in (0), predicate in (1609)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as offer, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23401 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23401 AND 23401 <= predicate_max@2, required_guarantees=[predicate in (23401)]
  ProjectionExec: expr=[product@3 as __inner__product]
    DecodeObjectIdsExec: projections=[vendor, country, offer, decode(product) as product]
      FilterExec: country@1 = {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:}
        DecodeObjectIdsExec: projections=[vendor, decode(country) as country, offer, product]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@2, offer@0)], projection=[vendor@0, country@1, offer@2, product@4]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@0, vendor@1)], projection=[vendor@0, country@1, offer@2]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> ?country], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as vendor, object@3 as country], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14903, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14903 AND 14903 <= predicate_max@2, required_guarantees=[predicate in (14903)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as offer, object@3 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23402 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23402 AND 23402 <= predicate_max@2, required_guarantees=[predicate in (23402)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as offer, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23401 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23401 AND 23401 <= predicate_max@2, required_guarantees=[predicate in (23401)]
