bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q7 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(product@0) as product]
  HashJoinExec: mode=CollectLeft, join_type=LeftAnti, on=[(product@0, __inner__product@0)]
    ProjectionExec: expr=[product@0 as product]
      SortExec: TopK(fetch=1000), expr=[AS_SORTABLE_BYTES(offerCount@1) DESC], preserve_partitioning=[false]
        ProjectionExec: expr=[product@0 as product, <uuid>@1 as offerCount]
          AggregateExec: mode=Single, gby=[product@0 as product], aggr=[COUNT(offer) as <uuid>]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType1>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType1>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType1> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType1> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType1>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as offer, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>)]
    ProjectionExec: expr=[product@1 as __inner__product]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[country@0, product@3]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@0, vendor@1)], projection=[country@1, offer@2]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> ?country], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as vendor, object@3 as country], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> AND object@3 = <http://downlode.org/rdf/iso-3166/countries#US>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://downlode.org/rdf/iso-3166/countries#US> AND <http://downlode.org/rdf/iso-3166/countries#US> <= object_max@6, required_guarantees=[object in (<http://downlode.org/rdf/iso-3166/countries#US>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country>)]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as offer, object@3 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor>)]
        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as offer, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND DynamicFilter [ empty ] AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>)]
