bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q7 (Optimized).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(product) AS product
  LeftAnti Join: product = __correlated_sq_1.__inner__product
    Projection: product
      Sort: ENC_SORT(offerCount) DESC NULLS FIRST, fetch=1000
        Projection: product, INT64_AS_TERM(<uuid>) AS offerCount
          Aggregate: groupBy=[[product AS product]], aggr=[[count(offer) AS <uuid>]]
            Projection: lhs.product AS product, rhs.offer AS offer
              Inner Join: lhs.product = rhs.product
                SubqueryAlias: lhs
                  QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType1>)
                SubqueryAlias: rhs
                  QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product)
    SubqueryAlias: __correlated_sq_1
      Projection: lhs.product AS __inner__product
        Inner Join: lhs.vendor = rhs.vendor
          SubqueryAlias: lhs
            Projection: lhs.product AS product, rhs.vendor AS vendor
              Inner Join: lhs.offer = rhs.offer
                SubqueryAlias: lhs
                  QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product)
                SubqueryAlias: rhs
                  QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor)
          SubqueryAlias: rhs
            Projection: vendor
              Filter: country = FixedSizeBinary(<object id>)
                QuadPattern (?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> ?country)
